Fixed footer blanking on mobile

--- a/res/css/homepage.css
+++ b/res/css/homepage.css
@@ -118,6 +118,5 @@ article a:not(.continue-reading):hover {
     .headerContainer #center h1 {
         font-size: 4.5vh;
     }
-    footer { display: none; }
 }
 
